Court Characters Init

--- a/localisation/english/court_l_english.yml
+++ b/localisation/english/court_l_english.yml
@@ -1,16 +1,31 @@
 ﻿l_english:
  court_tokens: "Court"
-  court_position_1: ""
-  court_position_2: ""
-  court_position_3: ""
-  court_position_4: ""
-  court_position_5: ""
-  court_position_6: ""
-  court_position_7: ""
-  court_position_8: ""
-  court_position_9: ""
-  court_position_10: ""
-  court_position_11: ""
+  court_character_00: "[?first_name@token:court_character_00.GetTokenLocalizedKey][?middle_name@token:court_character_00.GetTokenLocalizedKey][?last_name@token:court_character_00.GetTokenLocalizedKey]"
+  court_character_01: "[?first_name@token:court_character_01.GetTokenLocalizedKey][?middle_name@token:court_character_01.GetTokenLocalizedKey][?last_name@token:court_character_01.GetTokenLocalizedKey]"
+  court_character_02: "[?first_name@token:court_character_02.GetTokenLocalizedKey][?middle_name@token:court_character_02.GetTokenLocalizedKey][?last_name@token:court_character_02.GetTokenLocalizedKey]"
+  court_character_03: "[?first_name@token:court_character_03.GetTokenLocalizedKey][?middle_name@token:court_character_03.GetTokenLocalizedKey][?last_name@token:court_character_03.GetTokenLocalizedKey]"
+  court_character_04: "[?first_name@token:court_character_04.GetTokenLocalizedKey][?middle_name@token:court_character_04.GetTokenLocalizedKey][?last_name@token:court_character_04.GetTokenLocalizedKey]"
+  court_character_05: "[?first_name@token:court_character_05.GetTokenLocalizedKey][?middle_name@token:court_character_05.GetTokenLocalizedKey][?last_name@token:court_character_05.GetTokenLocalizedKey]"
+  court_character_06: "[?first_name@token:court_character_06.GetTokenLocalizedKey][?middle_name@token:court_character_06.GetTokenLocalizedKey][?last_name@token:court_character_06.GetTokenLocalizedKey]"
+  court_character_07: "[?first_name@token:court_character_07.GetTokenLocalizedKey][?middle_name@token:court_character_07.GetTokenLocalizedKey][?last_name@token:court_character_07.GetTokenLocalizedKey]"
+  court_character_08: "[?first_name@token:court_character_08.GetTokenLocalizedKey][?middle_name@token:court_character_08.GetTokenLocalizedKey][?last_name@token:court_character_08.GetTokenLocalizedKey]"
+  court_character_09: "[?first_name@token:court_character_09.GetTokenLocalizedKey][?middle_name@token:court_character_09.GetTokenLocalizedKey][?last_name@token:court_character_09.GetTokenLocalizedKey]"
+  court_character_10: "[?first_name@token:court_character_10.GetTokenLocalizedKey][?middle_name@token:court_character_10.GetTokenLocalizedKey][?last_name@token:court_character_10.GetTokenLocalizedKey]"
+  court_character_11: "[?first_name@token:court_character_11.GetTokenLocalizedKey][?middle_name@token:court_character_11.GetTokenLocalizedKey][?last_name@token:court_character_11.GetTokenLocalizedKey]"
+  court_character_12: "[?first_name@token:court_character_12.GetTokenLocalizedKey][?middle_name@token:court_character_12.GetTokenLocalizedKey][?last_name@token:court_character_12.GetTokenLocalizedKey]"
+  court_character_13: "[?first_name@token:court_character_13.GetTokenLocalizedKey][?middle_name@token:court_character_13.GetTokenLocalizedKey][?last_name@token:court_character_13.GetTokenLocalizedKey]"
+  court_character_14: "[?first_name@token:court_character_14.GetTokenLocalizedKey][?middle_name@token:court_character_14.GetTokenLocalizedKey][?last_name@token:court_character_14.GetTokenLocalizedKey]"
+  court_character_15: "[?first_name@token:court_character_15.GetTokenLocalizedKey][?middle_name@token:court_character_15.GetTokenLocalizedKey][?last_name@token:court_character_15.GetTokenLocalizedKey]"
+  court_character_16: "[?first_name@token:court_character_16.GetTokenLocalizedKey][?middle_name@token:court_character_16.GetTokenLocalizedKey][?last_name@token:court_character_16.GetTokenLocalizedKey]"
+  court_character_17: "[?first_name@token:court_character_17.GetTokenLocalizedKey][?middle_name@token:court_character_17.GetTokenLocalizedKey][?last_name@token:court_character_17.GetTokenLocalizedKey]"
+  court_character_18: "[?first_name@token:court_character_18.GetTokenLocalizedKey][?middle_name@token:court_character_18.GetTokenLocalizedKey][?last_name@token:court_character_18.GetTokenLocalizedKey]"
+  court_character_19: "[?first_name@token:court_character_19.GetTokenLocalizedKey][?middle_name@token:court_character_19.GetTokenLocalizedKey][?last_name@token:court_character_19.GetTokenLocalizedKey]"
+  court_character_20: "[?first_name@token:court_character_20.GetTokenLocalizedKey][?middle_name@token:court_character_20.GetTokenLocalizedKey][?last_name@token:court_character_20.GetTokenLocalizedKey]"
+  court_character_21: "[?first_name@token:court_character_21.GetTokenLocalizedKey][?middle_name@token:court_character_21.GetTokenLocalizedKey][?last_name@token:court_character_21.GetTokenLocalizedKey]"
+  court_character_22: "[?first_name@token:court_character_22.GetTokenLocalizedKey][?middle_name@token:court_character_22.GetTokenLocalizedKey][?last_name@token:court_character_22.GetTokenLocalizedKey]"
+  court_character_23: "[?first_name@token:court_character_23.GetTokenLocalizedKey][?middle_name@token:court_character_23.GetTokenLocalizedKey][?last_name@token:court_character_23.GetTokenLocalizedKey]"
+  court_character_24: "[?first_name@token:court_character_24.GetTokenLocalizedKey][?middle_name@token:court_character_24.GetTokenLocalizedKey][?last_name@token:court_character_24.GetTokenLocalizedKey]"
+  court_character_25: "[?first_name@token:court_character_25.GetTokenLocalizedKey][?middle_name@token:court_character_25.GetTokenLocalizedKey][?last_name@token:court_character_25.GetTokenLocalizedKey]"
  affiliation_tokens: "Affiliation"
   affiliation_royalists: "Royalists"
   affiliation_pretenders: "Pretenders"
