Some Work on Court System

--- a/localisation/english/court_l_english.yml
+++ b/localisation/english/court_l_english.yml
@@ -27,6 +27,7 @@
   court_character_24: "[?first_name@token:court_character_24.GetTokenLocalizedKey][?middle_name@token:court_character_24.GetTokenLocalizedKey][?last_name@token:court_character_24.GetTokenLocalizedKey]"
   court_character_25: "[?first_name@token:court_character_25.GetTokenLocalizedKey][?middle_name@token:court_character_25.GetTokenLocalizedKey][?last_name@token:court_character_25.GetTokenLocalizedKey]"
  affiliation_tokens: "Affiliation"
+  affiliation_none: "Independent"
   affiliation_royalists: "Royalists"
   affiliation_pretenders: "Pretenders"
   affiliation_aristocrats: "Aristocrats"
@@ -38,7 +39,22 @@
   affiliation_imperialists: "Imperialists"
   affiliation_slave_traders: "Slave Traders"
   affiliation_liberals: "Liberals"
+  affiliation_nationalists: "Nationalists"
+  affiliation_traditionalists: "Traditionalists"
  occupation_tokens: "Occupation"
+  occupation_none: "Idle"
+  occupation_heir: "Heir"
+  occupation_nobleman: "Nobleman"
+  occupation_tribal_elder: "Tribal Elder"
+  occupation_court_advisor: "Court Advisor"
+  occupation_treasurer: "Treasurer"
+  occupation_general: "General"
+  occupation_warlord: "Warlord"
+  occupation_merchant: "Merchant"
+  occupation_religious_leader: "Religious Leader"
+  occupation_labor_leader: "Labor Leader"
+  occupation_bureaucrat: "Bureaucrat"
+  occupation_admiral: "Admiral"
  personality_tokens: "Personality"
  goal_tokens: "Goal"
  name_tokens: "Name"
