--- a/localisation/english/court_l_english.yml
+++ b/localisation/english/court_l_english.yml
@@ -44,18 +44,148 @@
  occupation_tokens: "Occupation"
   occupation_none: "Idle"
   occupation_heir: "Heir"
-  occupation_nobleman: "Nobleman"
-  occupation_tribal_elder: "Tribal Elder"
-  occupation_court_advisor: "Court Advisor"
+  occupation_inquisitor: "Inquisitor"
+  occupation_theologian: "Theologian"
+  occupation_artist: "Artist"
+  occupation_philosopher: "Philosopher"
+  personality_tokens: "Personality"
+  occupation_auditor: "Auditor"
+  occupation_bureaucrat: "Bureaucrat"
+  occupation_governor: "Governor"
+  occupation_minister: "Minister"
   occupation_treasurer: "Treasurer"
+  occupation_diplomat: "Diplomat"
+  occupation_spymaster: "Spymaster"
+  occupation_statesman: "Statesman"
+  occupation_translator: "Translator"
+  occupation_admiral: "Admiral"
+  occupation_naval_reformer: "Naval Reformer"
+  occupation_investor: "Investor"
+  occupation_labor_leader: "Labor Leader"
+  occupation_merchant: "Merchant"
+  occupation_smuggler: "Smuggler"
   occupation_general: "General"
   occupation_warlord: "Warlord"
-  occupation_merchant: "Merchant"
-  occupation_religious_leader: "Religious Leader"
-  occupation_labor_leader: "Labor Leader"
-  occupation_bureaucrat: "Bureaucrat"
-  occupation_admiral: "Admiral"
+  occupation_royal_guard: "Royal Guard"
+  occupation_army_reformer: "Army Reformer"
+  occupation_logistics_commander: "Logistics Commander"
  personality_tokens: "Personality"
- goal_tokens: "Goal"
+  personality_none: "Neutral"
+  personality_tyrant: "Tyrant"
+  personality_righteous: "Righteous"
+  personality_calm: "Calm"
+  personality_wrathful: "Wrathful"
+  personality_greedy: "Greedy"
+  personality_benevolent: "Benevolent"
+  personality_ambitious: "Ambitious"
+  personality_content: "Content"
+  personality_diligent: "Diligent"
+  personality_slothful: "Slothful"
+  personality_pious: "Pious"
+  personality_cynical: "Cynical"
+  personality_arrogant: "Arrogant"
+  personality_humble: "Humble"
+  personality_reticent: "Reticent"
+  personality_gregarious: "Gregarious"
+ ambition_none: "Ambition"
+  ambition_none: "None"
+  ambition_conquest: "Conquest"
+  ambition_conversion: "Conversion"
+  ambition_reform: "Reform"
+  ambition_slavery: "Slavery"
+  ambition_liberty: "Liberty"
+  ambition_power: "Power"
+  ambition_wealth: "Wealth"
+ mission_tokens: "Mission"
+   mission_promote_religion: "Promote Religion"
+   mission_promote_culture: "Promote Culture"
+   mission_promote_loyalty: "Promote Loyalty"
+   mission_incite_rebellion: "Incite Rebellion"
+   mission_root_corruption: "Root Corruption"
+   mission_tribal_raid: "Tribal Raid"
+   mission_slave_raid: "Slave Raid"
+   mission_investigate_region: "Investigate Region"
+   mission_colonial_expansion: "Colonial Expansion"
+   mission_improve_relations: "Improve Relations"
+   mission_jihad: "Jihad"
+ plot_tokens: "Plots"
+  plot_assassinate_character: "Assassinate Character"
+  plot_seek_independence: "Seek Independence"
+  plot_instigate_coup: "Instigate Coup"
+  plot_embezzle_funds: "Embezzle Funds"
+  plot_promote_pretender: "Promote Pretender"
+ sex_tokens: "Sex"
+  sex_male: "Male"
+  sex_female: "Female"
+ portrait_tokens: "Portraits"
  name_tokens: "Name"
-
+  name_none: ""
+  name_alexander: "Alexander"
+  name_abraham: "Abraham"
+  name_alfred: "Alfred"
+  name_arnold: "Arnold"
+  name_arthur: "Arthur"
+  name_baxter: "Baxter"
+  name_bernard: "Bernard"
+  name_blair: "Blair"
+  name_charles: "Charles"
+  name_douglas: "Douglas"
+  name_edgar: "Edgar"
+  name_edward: "Edward"
+  name_george: "George"
+  name_franklin: "Frankin"
+  name_francis: "Francis"
+  name_frederick: "Frederick"
+  name_henry: "Henry"
+  name_harold: "Harold"
+  name_jane: "Jane"
+  name_james: "James"
+  name_jacob: "Jacob"
+  name_john: "John"
+  name_jones: "Jones"
+  name_leo: "Leo"
+  name_louis: "Louis"
+  name_marc: "Marc"
+  name_martin: "Martin"
+  name_nathaniel: "Nathaniel"
+  name_oliver: "Oliver"
+  name_oscar: "Oscar"
+  name_otto: "Otto"
+  name_raymond: "Raymond"
+  name_richard: "Richard"
+  name_smith: "Smith"
+  name_thomas: "Thomas"
+  name_theodore: "Theodore"
+  name_thaddeus: "Thaddeus"
+  name_warren: "Warren"
+  name_william: "William"
+  name_wilson: "Wilson"
+  name_antoine: "Antoine"
+  name_brice: "Brice"
+  name_armand: "Armand"
+  name_claude: "Claude"
+  name_francois: "Francois"
+  name_frederic: "Frederic"
+  name_gaston: "Gaston"
+  name_guy: "Guy"
+  name_hugo: "Hugo"
+  name_jacques: "Jacques"
+  name_jean: "Jean"
+  name_jules: "Jules"
+  name_luc: "Luc"
+  name_marcel: "Marcel"
+  name_maurice: "Maurice"
+  name_nicolas: "Nicolas"
+  name_orville: "Orville"
+  name_pascal: "Pascal"
+  name_paul: "Paul"
+  name_philippe: "Philippe"
+  name_pierre: "Pierre"
+  name_quentin: "Quentin"
+  name_rene: "Rene"
+  name_russell: "Russell"
+  name_samuel: "Samuel"
+  name_sebastian: "Sebastian"
+  name_sinclair: "Sinclair"
+  name_tristan: "Tristan"
+  name_victor: "Victor "
